[package]
name = "knot_analyze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kore = { package = "knot_core", path = "../kore" }
lang = { package = "knot_language", path = "../language" }

[dev-dependencies]
kore = { package = "knot_core", path = "../kore", features = ["test"] }
lang = { package = "knot_language", path = "../language", features = ["test"] }
parse = { package = "knot_parse", path = "../parse", default-features = false, features = [
  "test",
] }
