[package]
name = "knot_command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kore = { package = "knot_core", path = "../kore" }
lang = { package = "knot_language", path = "../language" }
js = { package = "knot_plugin_javascript", path = "../plugin_javascript" }
parse = { package = "knot_parse", path = "../parse" }
analyze = { package = "knot_analyze", path = "../analyze" }

[dev-dependencies]
ctor = "0.2.5"
tempfile = "3.8.0"
