[package]
name = "knot_command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
glob = "0.3.1"
petgraph = "0.6.4"
kore = { package = "knot_core", path = "../kore" }
lang = { package = "knot_language", path = "../language" }
js = { package = "knot_plugin_javascript", path = "../plugin_javascript" }
parse = { package = "knot_parse", path = "../parse" }
analyze = { package = "knot_analyze", path = "../analyze" }

[dev-dependencies]
pretty_assertions = "1.4.0"
ctor = "0.2.5"
tempfile = "3.8.0"
