[package]
name = "knot_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
glob = "0.3.1"
petgraph = "0.6.4"
kore = { package = "knot_core", path = "../kore" }
lang = { package = "knot_language", path = "../language" }
parse = { package = "knot_parse", path = "../parse" }
analyze = { package = "knot_analyze", path = "../analyze" }

[dev-dependencies]
tempfile = "3.8.0"
kore = { package = "knot_core", path = "../kore", features = ["test"] }
knot_engine = { path = ".", features = ["test"] }

[features]
test = []
