[package]
name = "knot_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indenter = { version = "0.3.3", features = ["std"], optional = true }
pretty_assertions = { version = "1.4.0", optional = true }

[features]
format = ["dep:indenter"]
test = ["dep:pretty_assertions"]
