[package]
name = "knot_language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kore = { package = "knot_core", path = "../kore", default-features = false }

[dev-dependencies]
# # used to expose own test features from crate in test scopes
# # https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
# knot_language = { path = ".", features = ["test"] }

[features]
test = []
format = ["kore/format"]
