[package]
name = "knot_language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kore = { package = "knot_core", path = "../kore", default-features = false }

[features]
test = []
format = ["kore/format"]
