[package]
name = "knot_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.6.6"
lang = { package = "knot_language", path = "../language" }

[dev-dependencies]
lang = { package = "knot_language", path = "../language", features = [
  "test",
  "format",
] }

[features]
test = []
