[package]
name = "knot_plugin_javascript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kore = { package = "knot_core", path = "../kore", default-features = false }
lang = { package = "knot_language", path = "../language" }

[features]
format = ["kore/format"]
